--- a/MOBILE/package.json
+++ b/MOBILE/package.json
@@ -3,24 +3,30 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start ",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/bai-jamjuree": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-svg": "13.9.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.1.0",
     "eslint": "^8.55.0",
+    "react-native-svg-transformer": "^1.2.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
