--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "migration": "npx prisma migrate dev",
+    "migration:reset": "npx prisma migrate reset",
     "update:prisma": "npx prisma generate --watch",
     "seed": "npx prisma db seed",
     "studio": "npx prisma studio"
