--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
     "@prisma/client": "5.7.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -29,6 +30,7 @@
     "fastify": "^4.24.3",
     "jest": "^29.5.0",
     "prisma": "^5.7.0",
-    "tsx": "^4.6.2"
+    "tsx": "^4.6.2",
+    "zod": "^3.22.4"
   }
 }
