--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.5.0",
+    "@fastify/jwt": "^7.2.4",
     "@prisma/client": "5.7.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "dotenv": "^16.0.3",
+    "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
     "eslint": "^8.37.0",
     "fastify": "^4.24.3",
     "jest": "^29.5.0",
