--- a/WEB/package.json
+++ b/WEB/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.297.0",
     "next": "14.0.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18"
   },
